--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
+            "glob": "_redirects",
+            "input": "src",
+            "output": "/",
             "styles": [
               "src/styles.css"
             ],
