--- a/angular.json
+++ b/angular.json
@@ -25,11 +25,9 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "_redirects"
             ],
-            "glob": "_redirects",
-            "input": "src",
-            "output": "/",
             "styles": [
               "src/styles.css"
             ],
